# git-metarepo

./: pyproject.toml
.github/workflows/: python-package.yml  pythonpackage.yml
metarepo/: manifest.py
