[tool.poetry]
name = "metarepo"
version = "0.1.2"
description = "Git Meta Repository Manager"
authors = ["Jim Ekman <jim@nurd.se>"]
license = "MIT"
keywords = ["git", "repository", "repo", "submodules"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Version Control"
]

[tool.poetry.scripts]
metarepo = "metarepo.cli:cli"
git-meta = "metarepo.cli:cli"

[tool.poetry.dependencies]
python = "^3.8.0"
gitpython = "^3.1.29"
pyyaml = "^6.0.0"
click = "^8.0.0"
colorama = "^0.4.3"
prompt-toolkit = "==3.0.47"
pydantic = ">=1.6.2,<3.0.0"

[tool.poetry.dev-dependencies]
tox = "^4.11.3"
pytest = "^7.4.2"
wheel = "^0.41.2"
black = "^23.9.1"
pre-commit = "^3.5.0"
pylint = "^3.0.1"
flake8 = "^5.0.4"
tox-pyenv = "^1.1.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=1.3.1"]
build-backend = "poetry.masonry.api"
